--- a/PriceProject/appsettings.json
+++ b/PriceProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "DbInfo": {
+    "DB": "Data Source=SURFACE; Database=PRICE_DB; Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
